# itch-dl

./: .gitignore  LICENSE  README.md  downloader.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
itch_dl/: __main__.py  api.py  cli.py  config.py  consts.py  downloader.py  handlers.py  infobox.py  keys.py  utils.py
