[tool.poetry]
name = "itch-dl"
packages = [{ include = "itch_dl" }]
version = "0.5.2"
description = "itch.io bulk game downloader"
homepage = "https://github.com/DragoonAethis/itch-dl"
repository = "https://github.com/DragoonAethis/itch-dl"
authors = ["Dragoon Aethis <dragoon@dragonic.eu>"]
readme = "README.md"
license = "MIT"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[tool.poetry.urls]
"Wiki" = "https://github.com/DragoonAethis/itch-dl/wiki"
"Bug Tracker" = "https://github.com/DragoonAethis/itch-dl/issues"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.67.0"
urllib3 = "^1.26.20"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
pydantic = "^1.10.19"

[tool.poetry.scripts]
itch-dl = "itch_dl.cli:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = ["F", "E", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "T10", "ISC", "LOG", "Q", "SIM", "TC", "ARG", "PGH", "PLE", "PLW", "RUF", "G"]
ignore = ["COM812"]
