[project]
name = "itch-dl"
dynamic = ["version"]
description = "itch.io bulk game downloader"
authors = [{ name = "Dragoon Aethis", email = "dragoon@dragonic.eu" }]
requires-python = ">=3.10.0"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Games/Entertainment",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "tqdm>=4.67.3,<5",
    "urllib3>=2.6.3,<3",
    "requests>=2.32.5,<3",
    "beautifulsoup4>=4.14.3,<5",
    "lxml>=6.0.2,<7",
]

[project.urls]
GitHub = "https://github.com/DragoonAethis/itch-dl"
Wiki = "https://github.com/DragoonAethis/itch-dl/wiki"
Issues = "https://github.com/DragoonAethis/itch-dl/issues"
Donate = "https://ko-fi.com/dragoonaethis"

[project.scripts]
itch-dl = "itch_dl.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "itch_dl/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["itch_dl"]

[tool.hatch.build.targets.wheel]
include = ["itch_dl"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = ["F", "E", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "T10", "ISC", "LOG", "Q", "SIM", "TC", "ARG", "PGH", "PLE", "PLW", "RUF", "G"]
ignore = ["COM812", "LOG015"]
